# ClevoFanControl

./: CMakeLists.txt  ClevoFanControl.cpp  ClevoFanControl.h  CmakeLists.txt  LICENSE  README.md  README_zh_cn.md  config.ui  main.cpp  monitor.ui
run/: config.json  default_config.json
src/main/: CFCconfig.cpp  CFCconfig.h  CFCmonitor.cpp  ClevoEcAccessor.cpp  ClevoEcAccessor.h  ClevoFanControl.cpp  ClevoFanControl.h  ConfigManager.cpp  ConfigManager.h  FanController.cpp  FanController.h  default_config.json  main.cpp  winRing0Api.cpp  winRing0Api.h
src/main/cmd/: CMakeLists.txt  main.cpp
src/main/gui/: CFCconfig.h  CFCmonitor.cpp  CFCmonitor.h  CMakeLists.txt  ClevoFanControl.cpp  ConfigManager.cpp  ConfigManager.h  FanController.cpp  FanController.h  main.cpp
src/resources/: ClevoFanControl.qrc  ClevoFanControl.rc
src/scripts/: cfc-launcher.sh  linux-build.sh  start-cfc.desktop  start-cfc.sh  win64build.bat
src/ui/: monitor.ui
